<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextAppearance="@style/Toolbar.TitleText">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lin_date_seat_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:animateLayoutChanges="true"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:baselineAligned="false"
                android:weightSum="1">

                <RelativeLayout
                    android:id="@+id/rel_leaving_from"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.43">

                    <TextView
                        android:id="@+id/text_leaving_from"
                        style="@style/text_floating_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:gravity="left"
                        android:text="@string/lb_leaving_from"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/text_source"
                        style="@style/booking_engine_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_leaving_from"
                        android:layout_marginRight="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:gravity="left"
                        android:text="@string/lb_leaving_from"
                        android:textColor="@color/label_floating" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.14">

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/btn_flip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:background="@null"
                        android:src="@drawable/ic_arrow_forward"
                        android:tint="@color/colorAccent" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rel_going_to"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.43">

                    <TextView
                        android:id="@+id/text_going_to"
                        style="@style/text_floating_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:gravity="right"
                        android:text="@string/lb_going_to"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/text_destination"
                        style="@style/booking_engine_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/text_going_to"
                        android:layout_marginLeft="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:gravity="right"
                        android:text="@string/lb_going_to"
                        android:textColor="@color/label_floating" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:id="@+id/div_source_destination"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal"
                android:weightSum="1">


                <ImageView
                    android:id="@+id/img_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".15"
                    android:scaleType="fitEnd"
                    android:src="@drawable/ic_warning"
                    android:tint="@color/error_red"
                    android:visibility="gone" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large">

                <TextView
                    android:id="@+id/tv_departure"
                    style="@style/text_floating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/lb_departure" />

                <RelativeLayout
                    android:id="@+id/rel_tv_today_container"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@+id/tv_departure"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium">

                    <TextView
                        android:id="@+id/tv_today"
                        style="@style/booking_engine_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:drawableLeft="@drawable/ic_calender"
                        android:drawablePadding="@dimen/padding_medium"
                        android:text="25 Sep' 2017" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_toRightOf="@id/rel_tv_today_container">

                    <LinearLayout
                        android:id="@+id/lin_tomorrow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:clickable="true">


                        <TextView
                            android:id="@+id/tv_tomorrow"
                            style="@style/booking_engine_text_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginRight="@dimen/margin_large"
                            android:text="@string/lb_tomorrow" />
                    </LinearLayout>


                </RelativeLayout>
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@color/divider" />

            <RelativeLayout
                android:id="@+id/rel_premium_checkbox_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_header">

                <CheckBox
                    android:id="@+id/chk_premium_only"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/margin_checkbox_negative"
                    android:layout_marginTop="-2dp" />

                <TextView
                    android:id="@+id/tv_premium_only"
                    style="@style/booking_engine_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/chk_premium_only"
                    android:text="@string/lb_premium_buses_only" />

                <TextView
                    android:id="@+id/tv_volvo"
                    style="@style/text_floating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_premium_only"
                    android:layout_toRightOf="@+id/chk_premium_only"
                    android:text="@string/lb_premium_sub_message"
                    android:textColor="@color/label_header_opac" />

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true">

                <Button
                    android:id="@+id/btn_find_buses"
                    style="@style/button_submit"
                    android:layout_width="match_parent"
                    android:text="@string/btn_find_buses" />
            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:orientation="vertical">


                <TextView
                    style="@style/text_floating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="8dp"
                    android:text="Ongoing offers" />


                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="70dp"
                    android:src="@drawable/bus" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="8dp" />

                <include layout="@layout/layout_offers" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="8dp" />

                <include
                    layout="@layout/layout_offers"
                    android:id="@+id/fragOffer" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</LinearLayout>